Backend code clean-up; and some changes to make angular code work